# plant-disease-assistant

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: project.yaml
data/sample/: README.md  manifest.csv
data/sample/PlantDoc/: annotations.json  classes.txt
data/sample/PlantDoc/labels/: plantdoc_01.txt  plantdoc_02.txt  plantdoc_03.txt  plantdoc_04.txt  plantdoc_05.txt  plantdoc_06.txt  plantdoc_07.txt  plantdoc_08.txt  plantdoc_09.txt  plantdoc_10.txt  plantdoc_11.txt  plantdoc_12.txt
docs/: dataset.md  dataset_audit.md  main.md  project_presentation.pptx  project_presentation.pptx.inspect.ndjson  project_presentation_before_generic_revision.pptx  project_report.md
notebooks/: 00_environment_and_data.ipynb
scripts/: audit_plantseg.py  check_datasets.py  check_environment.py  check_models.py  download_datasets.py  extract_plantdoc.py  show_dataset_examples.py
src/plant_disease/: __init__.py  models.py  paths.py
