[project]
name = "plant-disease-assistant"
version = "0.1.0"
description = "Plant disease classification, localization, and robustness course project"
requires-python = ">=3.13,<3.14"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test_project.py"]
